save in room database and show history

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">FoodRecognition</string>
+    <string name="app_name">Food Recognition v2</string>
 </resources>
